# evapi_ros

./: CHANGELOG.rst  CMakeLists.txt  README.md  evapi_ros_en.doxyfile  package.xml
debian/: changelog  control  gbp.conf  rules
ekb_test/: CMakeLists.txt  package.xml
ekb_test/include/ekb_test/: ekb_test.h
ekb_test/launch/: evakit.launch  evarobot.launch
ekb_test/src/: ekb_test.cpp  evakit.cpp
evapi_ros/: CMakeLists.txt  package.xml
evarobot_android/: CMakeLists.txt  package.xml
evarobot_android/include/evarobot_android/: evarobot_android.h
evarobot_android/launch/: evarobot_android.launch
evarobot_android/params/: evarobot_android.yaml
evarobot_android/src/: evarobot_android.cpp
evarobot_battery/: CMakeLists.txt  package.xml
evarobot_battery/include/evarobot_battery/: LTC2943.h  evarobot_battery.h
evarobot_battery/launch/: evarobot_battery.launch
evarobot_battery/params/: evarobot_battery_params.yaml
evarobot_battery/src/: LTC2943.cpp  evarobot_battery.cpp
evarobot_bumper/: CHANGELOG.rst  CMakeLists.txt  package.xml
evarobot_bumper/cfg/: evarobot_bumper.cfg
evarobot_bumper/include/evarobot_bumper/: evarobot_bumper.h
evarobot_bumper/launch/: evarobot_bumper.launch
evarobot_bumper/params/: evarobot_bumper_params.yaml
evarobot_bumper/src/: evarobot_bumper.cpp  evarobot_bumper.cpp.back  module_evarobot_bumper.cpp
evarobot_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
evarobot_controller/cfg/: evarobot_controller.cfg
evarobot_controller/include/evarobot_controller/: evarobot_controller.h
evarobot_controller/launch/: evarobot_controller.launch  evarobot_controller_evakit.launch
evarobot_controller/params/: evarobot_controller_evakit_params.yaml  evarobot_controller_params.yaml
evarobot_controller/src/: evarobot_controller.cpp
evarobot_driver/: CHANGELOG.rst  CMakeLists.txt  package.xml
evarobot_driver/cfg/: evarobot_driver.cfg
evarobot_driver/include/evarobot_driver/: evarobot_driver.h
evarobot_driver/launch/: driver.launch  driver_evakit.launch
evarobot_driver/params/: evarobot_driver_evakit_params.yaml  evarobot_driver_params.yaml  evarobot_driver_params.yaml~
evarobot_driver/sdk/src/: IMI2C.cpp  IMSPI.cpp
evarobot_driver/src/: enable_evarobot_driver.cpp  evarobot_driver.cpp  l298_evarobot_driver.cpp
evarobot_eio/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml
evarobot_eio/include/evarobot_eio/: evarobot_eio.h  evarobot_gripper.h  evarobot_rgb.h
evarobot_eio/launch/: evarobot_eio.launch  evarobot_gripper.launch  evarobot_rgb.launch
evarobot_eio/params/: evarobot_eio_params.yaml
evarobot_eio/sdk/include/: IMEIO.h  IMI2C.h
evarobot_eio/src/: evarobot_eio.cpp  evarobot_gripper.cpp  evarobot_rgb.cpp
evarobot_infrared/: CHANGELOG.rst  CMakeLists.txt  package.xml
evarobot_infrared/cfg/: evarobot_infrared.cfg
evarobot_infrared/include/evarobot_infrared/: evarobot_infrared.h
evarobot_infrared/launch/: evarobot_infrared.launch
evarobot_infrared/params/: evarobot_infrared_params.yaml  evarobot_infrared_params.yaml~
evarobot_infrared/src/: evarobot_infrared.cpp  evarobot_infrared.cpp.save
evarobot_minimu9/: CHANGELOG.rst  CMakeLists.txt  package.xml
evarobot_minimu9/cfg/: evarobot_minimu9.cfg
evarobot_minimu9/include/evarobot_minimu9/: evarobot_minimu9.h
evarobot_minimu9/launch/: evarobot_minimu9.launch
evarobot_minimu9/params/: evarobot_minimu9_params.yaml
evarobot_minimu9/sdk/include/: I2CBus.h
evarobot_minimu9/src/: evarobot_minimu9.cpp
evarobot_odometry/: CHANGELOG.rst  CMakeLists.txt  package.xml
evarobot_odometry/cfg/: evarobot_odometry.cfg
evarobot_odometry/evarobot_driver/: CMakeLists.txt
evarobot_odometry/evarobot_driver/src/: evarobot_driver.cpp  rpiPWM.cpp
evarobot_odometry/include/evarobot_odometry/: evarobot_odometry.h
evarobot_odometry/launch/: evarobot_odometry.launch  evarobot_odometry_evakit.launch
evarobot_odometry/params/: evarobot_odometry_evakit_params.yaml  evarobot_odometry_params.yaml
evarobot_odometry/src/: evarobot_odometry.cpp
evarobot_orientation/: CHANGELOG.rst  CMakeLists.txt  package.xml
evarobot_orientation/include/evarobot_orientation/: evarobot_orientation.h
evarobot_orientation/launch/: evarobot_orientation.launch
evarobot_orientation/params/: evarobot_orientation_params.yaml
evarobot_orientation/sdk/include/: IMSerial.h  IMUM6.h
evarobot_orientation/src/: evarobot_orientation.cpp
evarobot_pozyx/: CMakeLists.txt  package.xml
evarobot_pozyx/include/evarobot_pozyx/: evarobot_pozyx.h
evarobot_pozyx/src/: evarobot_pozyx.cpp
evarobot_sonar/: CHANGELOG.rst  CMakeLists.txt  package.xml
evarobot_sonar/cfg/: evarobot_sonar.cfg
evarobot_sonar/include/evarobot_sonar/: evarobot_sonar.h
evarobot_sonar/launch/: evarobot_sonar.launch
evarobot_sonar/params/: evarobot_sonar_params.yaml
evarobot_sonar/src/: evarobot_sonar.cpp  old_evarobot_sonar.cpp
evarobot_start/: CHANGELOG.rst  package.xml
evarobot_start/launch/: demo1.launch  imu_calibration.launch  master_discovery.launch  master_sync.launch  start.launch
evarobot_start/scripts/: imu2dcalibrator.py
evarobot_teleop/: CMakeLists.txt  package.xml
evarobot_teleop/launch/: evarobot_ps3.launch
evarobot_teleop/params/: evarobot_teleop_params.yaml
im_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
im_msgs/msg/: Battery.msg  BumperState.msg  WheelVel.msg
im_msgs/srv/: SetRGB.srv
launch/: demo1.launch  driver.launch  evarobot_eio.launch  evarobot_minimu9.launch  evarobot_orientation.launch  start.launch
minimu9/src/: I2CBus.cpp  (+3 more)
msg/: Bumper.msg
params/: evarobot_bumper_params.yaml  evarobot_controller_params.yaml  evarobot_odometry_params.yaml
rpm/: ros-indigo-evarobot-bumper.spec  ros-indigo-evarobot-controller.spec  ros-indigo-evarobot-driver.spec  ros-indigo-evarobot-eio.spec  ros-indigo-evarobot-minimu9.spec  ros-indigo-evarobot-odometry.spec  ros-indigo-evarobot-orientation.spec  ros-indigo-evarobot-sonar.spec  ros-indigo-evarobot-start.spec  template.spec
src/: evarobot_controller.cpp  evarobot_infrared.cpp  evarobot_sonar.cpp
(+643 files in other folders)
