<?xml version="1.0"?>
<package>
  <name>evarobot_android</name>
  <version>0.0.0</version>
  <description>Android applications and libraries for evarobot.</description>

  <author>Fatih Inan</author>
  <maintainer email="fatihinan37@hotmail.com">Fatih Inan</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_android</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapi_ros/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbridge_server</run_depend>

</package>
