<?xml version="1.0"?>
<package>
  <name>evarobot_minimu9</name>
  <version>0.1.2</version>
  <description>evarobot_minimu9 provides roll, pitch and yaw values of IMU sensor on Evarobot</description>

  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_minimu9</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapi_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>realtime_tools</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>realtime_tools</run_depend>
</package>
