<?xml version="1.0"?>
<package>
  <name>evarobot_odometry</name>
  <version>0.1.2</version>
  <description>evarobot_odometry provides position and velocity of Evarobot using encoders.</description>

  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_odometry</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapi_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>nav_msgs</build_depend> 
  <build_depend>geometry_msgs</build_depend> 
  <build_depend>roscpp</build_depend>
  <run_depend>nav_msgs</run_depend> 
  <run_depend>geometry_msgs</run_depend> 
  <run_depend>roscpp</run_depend>

</package>
