<?xml version="1.0"?>
<package>
  <name>evarobot_orientation</name>
  <version>0.1.2</version>
  <description>evarobot_orientation provides orientation of Evarobot over CHR-UM6 AHRS sensor.</description>

  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_orientation</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapi_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
