<?xml version="1.0"?>
<package>
  <name>evarobot_start</name>
  <version>0.1.1</version>
  <description>The evarobot_start package</description>

  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://evarobot.com</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
