<?xml version="1.0"?>
<package>
  <name>evarobot_start</name>
  <version>0.1.2</version>
  <description>evarobot_start provides roslaunch scripts for starting the Evarobot base functionality.</description>

  <author>Mehmet Akcakoca</author>
  <maintainer email="akcakocamehmet@gmail.com">Mehmet Akcakoca</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/evarobot_start</url>
  <url type="repository">https://github.com/inomuh/evapi_ros</url>
  <url type="bugtracker">https://github.com/inomuh/evapi_ros/issues</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>master_discovery_fkie</run_depend>
  <run_depend>master_sync_fkie</run_depend>

</package>
